// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoverNoResults props queryLanguage supports lucene and renders doc link 1`] = `
Array [
  <div
    class="euiSpacer euiSpacer--xl"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero dscNoResults"
    >
      <div
        class="euiCallOut euiCallOut--warning"
        data-test-subj="discoverNoResults"
      >
        <div
          class="euiCallOutHeader"
        >
          <div
            aria-hidden="true"
            class="euiCallOutHeader__icon"
            data-euiicon-type="help"
          />
          <span
            class="euiCallOutHeader__title"
          >
            No results match your search criteria
          </span>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--xl"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Refine your query
        </h3>
        <p>
          The search bar at the top uses Elasticsearch’s support for Lucene 
          <a
            class="euiLink euiLink--primary"
            href="documentation-link"
            rel="noopener noreferrer"
            target="_blank"
          >
            Query String syntax
          </a>
          . Here are some examples of how you can search for web server logs that have been parsed into a few fields.
        </p>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <dl
        class="euiDescriptionList euiDescriptionList--column"
      >
        <dt
          class="euiDescriptionList__title"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong>
              Find requests that contain the number 200, in any field
            </strong>
          </div>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <span>
            <code>
              200
            </code>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong>
              Find 200 in the status field
            </strong>
          </div>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <span>
            <code>
              status:200
            </code>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong>
              Find all status codes between 400-499
            </strong>
          </div>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <span>
            <code>
              status:[400 TO 499]
            </code>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong>
              Find status codes 400-499 with the extension php
            </strong>
          </div>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <span>
            <code>
              status:[400 TO 499] AND extension:PHP
            </code>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong>
              Find status codes 400-499 with the extension php or html
            </strong>
          </div>
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          <span>
            <code>
              status:[400 TO 499] AND (extension:php OR extension:html)
            </code>
          </span>
        </dd>
      </dl>
      <div
        class="euiSpacer euiSpacer--xl"
      />
    </div>
  </div>,
]
`;

exports[`DiscoverNoResults props timeFieldName renders time range feedback 1`] = `
Array [
  <div
    class="euiSpacer euiSpacer--xl"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero dscNoResults"
    >
      <div
        class="euiCallOut euiCallOut--warning"
        data-test-subj="discoverNoResults"
      >
        <div
          class="euiCallOutHeader"
        >
          <div
            aria-hidden="true"
            class="euiCallOutHeader__icon"
            data-euiicon-type="help"
          />
          <span
            class="euiCallOutHeader__title"
          >
            No results match your search criteria
          </span>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--xl"
      />
      <div
        class="euiText euiText--medium"
      >
        <h2
          data-test-subj="discoverNoResultsTimefilter"
        >
          Expand your time range
        </h2>
        <p>
          One or more of the indices you’re looking at contains a date field. Your query may not match anything in the current time range, or there may not be any data at all in the currently selected time range. You can try changing the time range to one which contains data.
        </p>
      </div>
    </div>
  </div>,
]
`;
